# crypto-forecast-api

./: Dockerfile  README.md  github.txt  pyproject.toml  requirements.txt
app/: data_source.py  main.py  utils.py
